<resources>
    <string name="app_name">Contacts</string>
    <string name="string_buscar_personal">Digite nombre del usuario</string>
    <string name="adicionar">Adicionar</string>
    <string name="nombre">Nombre</string>
    <string name="apellidos">Apellido</string>
    <string name="email">Email</string>
    <string name="telefono">Telefono</string>
    <string name="edad">Edad</string>
    <string name="guardar">Guardar</string>
    <string name="borrar">Borrar</string>
    <string name="borrar_personal">Borrar Personal?</string>
    <string name="yes">Si, borrar</string>
    <string name="cancel">Cancelar</string>
</resources>